--- a/staging/module-config/build.gradle
+++ b/staging/module-config/build.gradle
@@ -33,13 +33,13 @@ war {
 // tag::ext[]
 ext  {
     // tag::httpPort[]
-    liberty.server.var.'default.http.port' = '9080'
+    liberty.server.var.'default.http.port' = '9081'
     // end::httpPort[]
     // tag::httpsPort[]
-    liberty.server.var.'default.https.port' = '9443'
+    liberty.server.var.'default.https.port' = '9445'
     // end::httpsPort[]
     // tag::contextRoot[]
-    liberty.server.var.'default.context.root' = '/inventory'
+    liberty.server.var.'default.context.root' = '/trial'
     // end::contextRoot[]
 }
 // end::ext[]
