--- a/finish/module-jwt/build.gradle
+++ b/finish/module-jwt/build.gradle
@@ -16,10 +16,15 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    jdbcLib
+}
+
 dependencies {
     // provided dependencies
     providedCompile 'jakarta.platform:jakarta.jakartaee-api:10.0.0'
     providedCompile 'org.eclipse.microprofile:microprofile:6.0'
+    jdbcLib 'org.postgresql:postgresql:42.3.8'
 }
 
 war {
@@ -34,5 +39,12 @@ ext  {
     liberty.server.var.'client.https.port' = '9444'
     // end::https[]
 }
+
+task copyJdbcLibs(type: Copy) {
+    from configurations.jdbcLib
+    into "${buildDir}/wlp/usr/shared/resources"
+}
+
+deploy.dependsOn 'copyJdbcLibs'
 
 clean.dependsOn 'libertyStop'
