--- a/finish/module-securing/build.gradle
+++ b/finish/module-securing/build.gradle
@@ -37,6 +37,12 @@ ext  {
     liberty.server.var.'default.context.root' = '/inventory'
 }
 
+sourceSets {
+  main {
+    output.resourcesDir = file('build/classes/java/main')
+  }
+}
+
 task copyJdbcLibs(type: Copy) {
     from configurations.jdbcLib
     into "${buildDir}/wlp/usr/shared/resources"
